# vdeps

./: .gitignore  README.md  example_vdeps.toml  pyproject.toml  vdeps.py  vdeps.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_vdeps.py  test_vdeps_build_default.py  test_vdeps_configuration.py  test_vdeps_edge_cases.py  test_vdeps_enhancements.py  test_vdeps_env.py  test_vdeps_error_handling.py  test_vdeps_fixes.py  test_vdeps_install_rules.py  test_vdeps_isolation.py  test_vdeps_platforms.py  test_vdeps_variables.py
tests/fixtures/: dummy_script.py  vdeps.toml
tests/fixtures/vdeps/: gen_artifact.py
tests/fixtures/vdeps/complex_lib/: CMakeLists.txt
tests/fixtures/vdeps/empty_config/: CMakeLists.txt
tests/fixtures/vdeps/failing_project/: CMakeLists.txt
tests/fixtures/vdeps/mixed_project/: CMakeLists.txt
tests/fixtures/vdeps/multi_output/: CMakeLists.txt
